RESOLVED FIXED 254361
Fast HTML parser fails to call beginParsingChildren() / finishParsingChildren() on Elements it parses
https://bugs.webkit.org/show_bug.cgi?id=254361
Summary Fast HTML parser fails to call beginParsingChildren() / finishParsingChildren...
Chris Dumez
Reported 2023-03-23 12:37:25 PDT
Fast HTML parser fails to call beginParsingChildren() / finishParsingChildren() on Elements it parses. This causes some elements to think they're still parsing. This was found to cause some breakage on Gmail by Chrome: - https://chromium-review.googlesource.com/c/chromium/src/+/4307182 - https://chromium-review.googlesource.com/c/chromium/src/+/4316942
Attachments
Chris Dumez
Comment 1 2023-03-23 14:07:05 PDT
EWS
Comment 2 2023-03-23 18:02:33 PDT
Committed 262049@main (c155b303263d): <https://commits.webkit.org/262049@main> Reviewed commits have been landed. Closing PR #11886 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2023-03-23 18:03:14 PDT
Note You need to log in before you can comment on or make changes to this bug.