Fast HTML parser fails to call beginParsingChildren() / finishParsingChildren() on Elements it parses https://bugs.webkit.org/show_bug.cgi?id=254361

Reviewed by Geoffrey Garen.

The fast HTML parser fails to call beginParsingChildren() / finishParsingChildren() on Elements
it parses, unlike the full HTML parser.

This causes some elements to think they're still parsing and leads to subtle breakage.
Chrome found some breakage when adding attachments to an email in Gmail.

This is a cherry-pick of the following Blink patches:
- https://chromium-review.googlesource.com/c/chromium/src/+/4307182
- https://chromium-review.googlesource.com/c/chromium/src/+/4316942

* Source/WebCore/dom/Document.h:
* Source/WebCore/html/FormController.h:
* Source/WebCore/html/HTMLDocument.h:
(WebCore::HTMLDocument::HTMLDocument):
* Source/WebCore/html/parser/HTMLDocumentParserFastPath.cpp:
(WebCore::HTMLFastPathParser::parseContainerElement):
(WebCore::HTMLFastPathParser::parseVoidElement):
(WebCore::canUseFastPath):
(WebCore::tryFastParsingHTMLFragmentImpl):
(WebCore::tryFastParsingHTMLFragment):
* Tools/TestWebKitAPI/Tests/WebCore/HTMLParserIdioms.cpp:
(TestWebKitAPI::TEST):

Canonical link: https://commits.webkit.org/262049@main